# unit-test-cmake-template-use-hfc-cmake-and-autotools

./: CMakeLists.txt  Other_MathFunctions.cxx  Other_MathFunctions.h
toolchain/: toolchain.cmake
